--- a/index.html
+++ b/index.html
@@ -8,5 +8,34 @@
   </head>
   <body>
     <!-- Write your HTML here -->
+    <table>
+      <tr>
+        <td>City</td>
+        <td>State</td>
+        <td> 2017 estimate</td>
+      </tr>
+
+      <tr>
+        <td>New york</td>
+        <td>New York</td>
+        <td>8622698</td>
+      </tr>
+      <tr>
+        <td>Los Angeles</td>
+        <td>California</td>
+        <td>3999759</td>
+      </tr>
+      <tr>
+        <td>Chicago</td>
+        <td>Illinois</td>
+        <td>2716450</td>
+      </tr>
+      <tr>
+        <td>Houston</td>
+        <td>Texas</td>
+        <td>2312717</td>
+      </tr>
+
+    </table>
   </body>
 </html>
