--- a/index.html
+++ b/index.html
@@ -10,15 +10,16 @@
     <!-- Write your HTML here -->
     <table>
       <tr>
-        <td>City</td>
-        <td>State</td>
-        <td> 2017 estimate</td>
+        <th>City</th>
+        <th>State</th>
+        <th>2017 estimates</th>
+
       </tr>
 
       <tr>
-        <td>New york</td>
         <td>New York</td>
-        <td>8622698</td>
+        <td>New York</td>
+        <td>8,622,698</td>
       </tr>
       <tr>
         <td>Los Angeles</td>
